--- a/templates/base.html
+++ b/templates/base.html
@@ -43,17 +43,31 @@
         </div>
         {% endif %}
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            {% if request.user.is_authenticated %}
-            <ul class="nav navbar-nav navbar-right" style="margin-right: 0px">
-                <li style="margin-top: 15px; margin-right: 10px;"><a href="{% url 'my-profile' %}" style="padding: 0px">{{ request.user }}</a></li>
-                <li><button type="button" onClick="location.href='{% url 'logout' %}'" class="btn btn-default navbar-btn">Logout</button></li>
-            </ul>
-            {% else %}
-            <ul class="nav navbar-nav navbar-right" style="margin-right: 0px">
-                <li><a href="{% url 'login' %}">Login</a></li>
-                <li><button type="button" onClick="location.href='{% url 'register' %}'" class="btn btn-default navbar-btn">Sign in</button></li>
-            </ul>
-            {% endif %}
+            <div class="nav navbar-nav navbar-right marnav">
+                {% if  request.user.is_authenticated %}
+
+                    <li class="dropdown marnav" type="none">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <span class="glyphicon glyphicon-user"></span>
+                            <strong>{{ request.user }}</strong>
+                            <span class="glyphicon glyphicon-chevron-down"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'my-profile' %}">My Profile</a></li>
+                            <li><a href="#">Settings</a></li>
+                            <li><a href="#">Help</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="{% url 'logout' %}">Logout</a></li>
+                        </ul>
+                    </li>
+                {%  else %}
+                   <div style="margin-top:8px" class="lr">
+                        <a href="{% url 'login' %}" style="margin-right:15px">Login</a>
+                        <a href="{% url 'register' %}" class="btn btn-primary">Register</a>
+                   </div>
+                {% endif %}
+            </div>
+
         </div>
     </div>
 </nav>
