--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
             <div class="nav navbar-nav navbar-right marnav">
                 {% if  request.user.is_authenticated %}
 
-                    <li class="dropdown marnav" type="none">
+                    <li style="margin-right:40px"class="dropdown marnav" type="none">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <span class="glyphicon glyphicon-user"></span>
                             <strong>{{ request.user }}</strong>
